--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sass" : "node-sass --watch public/scss/main.scss public/css/style.css --source-map public/css/style.css.map"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "metismenujs": "^1.3.1",
     "next": "12.1.0",
+    "node-sass": "^7.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-scroll": "^1.8.5",
+    "react-visibility-sensor": "^5.1.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "8.10.0",
