--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sass" : "node-sass --watch public/scss/main.scss public/css/style.css --source-map public/css/style.css.map"
+    "sass": "node-sass --watch public/scss/main.scss public/css/style.css --source-map public/css/style.css.map"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.5",
+    "react-typist": "^2.0.5",
     "react-visibility-sensor": "^5.1.1",
     "wowjs": "^1.1.3"
   },
