--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.5",
     "react-typist": "^2.0.5",
