--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.5",
+    "react-slick": "^0.28.1",
     "react-typist": "^2.0.5",
     "react-visibility-sensor": "^5.1.1",
+    "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
