--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.1.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-scroll": "^1.8.5",
     "react-slick": "^0.28.1",
     "react-typist": "^2.0.5",
