--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass": "node-sass --watch public/scss/main.scss public/css/style.css --source-map public/css/style.css.map"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "bootstrap": "^5.1.3",
     "metismenujs": "^1.3.1",
     "next": "12.1.0",
